--- a/whale_dashboard.html
+++ b/whale_dashboard.html
@@ -32,116 +32,45 @@
         </div>
     </div>
 
-    <div class="ctrl">
-        <label>Min Account ($)</label>
-        <input type="number" id="minValue" value="2500000" step="500000" min="0" oninput="renderTable()">
-    </div>
-    <div class="filter-sep"></div>
-    <div class="ctrl">
-        <label>Coin Filter</label>
-        <select id="coinFilter" onchange="renderTable()">
-            <option value="">All Coins</option>
-        </select>
-    </div>
-    <div class="ctrl">
-        <label>Side</label>
-        <select id="sideFilter" onchange="renderTable()">
-            <option value="">All</option>
-            <option value="long">Long Only</option>
-            <option value="short">Short Only</option>
-        </select>
-    </div>
-    <div class="filter-sep"></div>
-    <div class="ctrl">
-        <label>Min Leverage (x)</label>
-        <input type="number" id="minLev" value="" step="1" min="1" placeholder="Any" style="width:90px"
-            oninput="renderTable()">
-    </div>
-    <div class="ctrl">
-        <label>Max Leverage (x)</label>
-        <input type="number" id="maxLev" value="" step="1" min="1" placeholder="Any" style="width:90px"
-            oninput="renderTable()">
-    </div>
-    <div class="filter-sep"></div>
-    <div class="ctrl">
-        <label>Min Size ($)</label>
-        <input type="number" id="minSize" value="" step="100000" min="0" placeholder="Any" style="width:110px"
-            oninput="renderTable()">
-    </div>
-    <div class="ctrl">
-        <label>Min |Funding| ($)</label>
-        <input type="number" id="minFunding" value="" step="1000" min="0" placeholder="Any" style="width:110px"
-            oninput="renderTable()">
-    </div>
-    <div class="filter-sep"></div>
-    <div class="ctrl">
-        <label>Lev. Type</label>
-        <select id="levTypeFilter" onchange="renderTable()">
-            <option value="">All</option>
-            <option value="isolated">Isolated</option>
-            <option value="cross">Cross</option>
-        </select>
-    </div>
-    <div class="filter-sep"></div>
-    <div class="ctrl">
-        <label>Currency</label>
-        <select id="currencySelect" onchange="onCurrencyChange()" style="width:80px">
-            <option value="USD">USD $</option>
-            <option value="BRL">BRL R$</option>
-            <option value="EUR">EUR €</option>
-            <option value="GBP">GBP £</option>
-            <option value="JPY">JPY ¥</option>
-            <option value="ARS">ARS $</option>
-            <option value="CAD">CAD $</option>
-            <option value="AUD">AUD $</option>
-            <option value="BTC">BTC ₿</option>
-        </select>
-    </div>
-    <div class="ctrl">
-        <label>Entry Currency</label>
-        <select id="entryCurrencySelect" onchange="onCurrencyChange()" style="width:80px">
-            <option value="USD">USD $</option>
-            <option value="BRL">BRL R$</option>
-            <option value="EUR">EUR €</option>
-            <option value="GBP">GBP £</option>
-            <option value="JPY">JPY ¥</option>
-            <option value="ARS">ARS $</option>
-            <option value="CAD">CAD $</option>
-            <option value="AUD">AUD $</option>
-            <option value="BTC">BTC ₿</option>
-        </select>
-    </div>
-    <div class="ctrl">
-        <label id="minValueCcyLabel">Min Value ($)</label>
-        <input type="number" id="minValueCcy" value="" step="100000" min="0" placeholder="Any" style="width:120px"
-            oninput="renderTable()">
-    </div>
-    <div class="ctrl">
-        <label id="maxValueCcyLabel">Max Value ($)</label>
-        <input type="number" id="maxValueCcy" value="" step="100000" min="0" placeholder="Any" style="width:120px"
-            oninput="renderTable()">
-    </div>
-    <div class="filter-sep"></div>
-    <div class="ctrl">
-        <label id="minEntryCcyLabel">Min Entry Corr (USD)</label>
-        <input type="number" id="minEntryCcy" value="" step="1" min="0" placeholder="Any" style="width:120px"
-            oninput="renderTable()">
-    </div>
-    <div class="ctrl">
-        <label id="maxEntryCcyLabel">Max Entry Corr (USD)</label>
-        <input type="number" id="maxEntryCcy" value="" step="1" min="0" placeholder="Any" style="width:120px"
-            oninput="renderTable()">
-    </div>
-    <div class="filter-sep"></div>
-    <div class="ctrl">
-        <label>Sort PnL window</label>
-        <div class="tabs">
-            <button class="tab active" data-window="allTime" onclick="setWindow(this)">All Time</button>
-            <button class="tab" data-window="month" onclick="setWindow(this)">30d</button>
-            <button class="tab" data-window="week" onclick="setWindow(this)">7d</button>
-            <button class="tab" data-window="day" onclick="setWindow(this)">24h</button>
+    <div class="controls">
+        <div class="ctrl">
+            <label>Currency</label>
+            <select id="currencySelect" onchange="onCurrencyChange()" style="width:80px">
+                <option value="USD">USD $</option>
+                <option value="BRL">BRL R$</option>
+                <option value="EUR">EUR €</option>
+                <option value="GBP">GBP £</option>
+                <option value="JPY">JPY ¥</option>
+                <option value="ARS">ARS $</option>
+                <option value="CAD">CAD $</option>
+                <option value="AUD">AUD $</option>
+                <option value="BTC">BTC ₿</option>
+            </select>
         </div>
-    </div>
+        <div class="ctrl">
+            <label>Entry Currency</label>
+            <select id="entryCurrencySelect" onchange="onCurrencyChange()" style="width:80px">
+                <option value="USD">USD $</option>
+                <option value="BRL">BRL R$</option>
+                <option value="EUR">EUR €</option>
+                <option value="GBP">GBP £</option>
+                <option value="JPY">JPY ¥</option>
+                <option value="ARS">ARS $</option>
+                <option value="CAD">CAD $</option>
+                <option value="AUD">AUD $</option>
+                <option value="BTC">BTC ₿</option>
+            </select>
+        </div>
+        <div class="filter-sep"></div>
+        <div class="ctrl">
+            <label>Sort PnL window</label>
+            <div class="tabs">
+                <button class="tab active" data-window="allTime" onclick="setWindow(this)">All Time</button>
+                <button class="tab" data-window="month" onclick="setWindow(this)">30d</button>
+                <button class="tab" data-window="week" onclick="setWindow(this)">7d</button>
+                <button class="tab" data-window="day" onclick="setWindow(this)">24h</button>
+            </div>
+        </div>
     </div>
 
     <div class="progress-bar">
@@ -188,6 +117,72 @@
                     <th id="th-funding" onclick="sortBy('funding')">Funding ↕</th>
                     <th>Dist. to Liq.</th>
                     <th id="th-accountValue" onclick="sortBy('accountValue')">Acct. Value ↕</th>
+                </tr>
+                <tr class="filter-row">
+                    <!-- # -->
+                    <th class="filter-cell"></th>
+                    <!-- Address -->
+                    <th class="filter-cell"></th>
+                    <!-- Coin -->
+                    <th class="filter-cell">
+                        <select id="coinFilter" onchange="renderTable()" class="col-filter">
+                            <option value="">All</option>
+                        </select>
+                        <select id="sideFilter" onchange="renderTable()" class="col-filter" style="margin-top:3px">
+                            <option value="">L+S</option>
+                            <option value="long">Long</option>
+                            <option value="short">Short</option>
+                        </select>
+                    </th>
+                    <!-- Size -->
+                    <th class="filter-cell">
+                        <input type="number" id="minSize" value="" step="100000" min="0" placeholder="Min"
+                            class="col-filter" oninput="renderTable()">
+                    </th>
+                    <!-- Leverage -->
+                    <th class="filter-cell">
+                        <input type="number" id="minLev" value="" step="1" min="1" placeholder="Min x"
+                            class="col-filter" oninput="renderTable()">
+                        <input type="number" id="maxLev" value="" step="1" min="1" placeholder="Max x"
+                            class="col-filter" style="margin-top:3px" oninput="renderTable()">
+                        <select id="levTypeFilter" onchange="renderTable()" class="col-filter" style="margin-top:3px">
+                            <option value="">All types</option>
+                            <option value="isolated">Isolated</option>
+                            <option value="cross">Cross</option>
+                        </select>
+                    </th>
+                    <!-- Value -->
+                    <th class="filter-cell">
+                        <input type="number" id="minValue" value="2500000" step="500000" min="0" placeholder="Min Acct"
+                            class="col-filter" oninput="renderTable()">
+                    </th>
+                    <!-- Value (CCY) -->
+                    <th class="filter-cell">
+                        <input type="number" id="minValueCcy" value="" step="100000" min="0" placeholder="Min"
+                            class="col-filter" oninput="renderTable()">
+                        <input type="number" id="maxValueCcy" value="" step="100000" min="0" placeholder="Max"
+                            class="col-filter" style="margin-top:3px" oninput="renderTable()">
+                    </th>
+                    <!-- Avg Entry -->
+                    <th class="filter-cell"></th>
+                    <!-- Entry Corr -->
+                    <th class="filter-cell">
+                        <input type="number" id="minEntryCcy" value="" step="1" min="0" placeholder="Min"
+                            class="col-filter" oninput="renderTable()">
+                        <input type="number" id="maxEntryCcy" value="" step="1" min="0" placeholder="Max"
+                            class="col-filter" style="margin-top:3px" oninput="renderTable()">
+                    </th>
+                    <!-- UPNL -->
+                    <th class="filter-cell"></th>
+                    <!-- Funding -->
+                    <th class="filter-cell">
+                        <input type="number" id="minFunding" value="" step="1000" min="0" placeholder="Min |$|"
+                            class="col-filter" oninput="renderTable()">
+                    </th>
+                    <!-- Dist. to Liq. -->
+                    <th class="filter-cell"></th>
+                    <!-- Acct. Value -->
+                    <th class="filter-cell"></th>
                 </tr>
             </thead>
             <tbody id="tableBody">
